tests/NormalTests/paczka1/small_fuzzy/15960682.err
Error in line 5: Xrwye A404 86,3
Error in line 7: 2PHCdFC S760 91,4
